--- a/content/w15.html
+++ b/content/w15.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w14-1 << <a href='w14-1.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w15</h1>
+<p>////</p>
 <p>1.為何學習計算機程式需要建立個人倉儲?</p>
 <p>   A:因為這樣才可以放作業。</p>
 <p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
@@ -155,8 +156,7 @@ img.add_border {
 <p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
 <p>   A:Brython很厲害。</p>
 <p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
-<p>   A:邏輯思考</p>
-<br />w14-1 << <a href='w14-1.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p>   A:邏輯思考</p><br />w14-1 << <a href='w14-1.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
