--- a/content/w16.html
+++ b/content/w16.html
@@ -2,7 +2,7 @@
         <head>
         <title>Changyou</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,9 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>About</h1>
-<p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
-<br />w16 << <a href='w16.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w16</h1>
+<br />w15 << <a href='w15.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
